Update colors, fix nav/footer align + fontawesome

--- a/components/footer.module.css
+++ b/components/footer.module.css
@@ -7,5 +7,5 @@
 }
 
 .social:hover {
-  @apply text-green-500;
+  @apply text-blue-500;
 }
