--- a/layouts/index.module.scss
+++ b/layouts/index.module.scss
@@ -27,7 +27,7 @@
   }
 
   a {
-    @apply text-green-500;
+    @apply text-blue-500;
   }
 
   p {
